# nexo-rs-extension-marketing

./: .gitignore  CHANGELOG.md  Cargo.toml  FOLLOWUPS.md  README.md  nexo-plugin.toml  plugin.toml
src/: audit.rs  availability.rs  broker_metrics.rs  draft.rs  draft_lock.rs  duplicate.rs  error.rs  forwarder.rs  guardrails.rs  lib.rs  main.rs  marketing_state.rs  notification.rs  notification_dedup.rs  scoring.rs  tenant.rs  threading.rs  tracking.rs  unsubscribe.rs  whatsapp_ingest.rs
src/admin/: audit.rs  auth.rs  compose.rs  config.rs  email_templates.rs  firehose.rs  healthz.rs  leads.rs  marketing_state.rs  mod.rs  persons.rs  scoring.rs  spam_filter.rs  telemetry.rs  tracking.rs
src/broker/: inbound.rs  mod.rs  outbound.rs  promo_classifier.rs
src/compliance/: mod.rs  outbound_gate.rs
src/config/: mod.rs
src/email_template/: blocks.rs  mod.rs  sanitize.rs  store.rs
src/enrichment/: mod.rs  scraper.rs
src/firehose/: mod.rs
src/identity/: mod.rs  resolver.rs
src/identity/adapters/: cross_thread.rs  display_name.rs  llm_extractor.rs  mod.rs  reply_to.rs  signature.rs
src/lead/: mod.rs  router.rs  score.rs  state.rs  store.rs
src/plugin/: broker.rs  dispatch.rs  mod.rs  tool_defs.rs
src/spam_filter/: classifier.rs  defaults.rs  mod.rs  rules.rs  store.rs
src/tools/: lead_detect_meeting_intent.rs  lead_followup_sweep.rs  lead_mark_qualified.rs  lead_profile.rs  lead_route.rs  lead_schedule_followup.rs  mod.rs
tests/: notification_live_reload.rs  tenant_isolation.rs
