[package]
name        = "nexo-rs-extension-marketing"
version     = "0.8.1"
edition     = "2021"
rust-version = "1.80"
license     = "MIT OR Apache-2.0"
authors     = ["Cristian Garcia <informacion@cristiangarcia.co>"]
repository  = "https://github.com/lordmacu/nexo-rs-extension-marketing"
description = "Email marketing extension for nexo-rs — lead state, identity resolution, AI drafts, multi-tenant CRM."
readme      = "README.md"
keywords    = ["nexo", "marketing", "crm", "email", "agent"]
categories  = ["email", "command-line-utilities"]

[[bin]]
name = "nexo-marketing"
path = "src/main.rs"

[lib]
name = "nexo_marketing"
path = "src/lib.rs"

[dependencies]
# Async runtime + IO
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serde + JSON
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
serde_bytes = "0.11"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1", features = ["v4", "v5", "serde"] }

# Error handling + observability
anyhow    = "1"
thiserror = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }

# Networking
async-nats = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
url     = "2"

# HTML parsing for enrichment
scraper   = "0.20"
robotstxt = "0.3"

# Email decoding (raw RFC 5322 → headers + body)
mail-parser = "0.9"

# Utilities
once_cell  = "1"
dashmap    = "6"
regex      = "1"
humantime  = "2"
# Lock-free atomic Arc swap — backs the live-reload pipeline
# for rules.yaml (router rebuilt on PUT /config/rules and
# atomically swapped under the broker handler's nose).
arc-swap   = "1"

# Admin HTTP server
axum       = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Framework deps — path during dev, crates.io after publish.
# The extension is sibling to nexo-rs-plugin-browser; same
# pattern there points at ../proyecto for local hacking.
nexo-microapp-sdk          = { path = "../proyecto/crates/microapp-sdk", features = ["identity", "routing", "enrichment", "plugin"] }
nexo-microapp-http         = { path = "../proyecto/crates/microapp-http" }
nexo-tool-meta             = { path = "../proyecto/crates/tool-meta" }
nexo-compliance-primitives = { path = "../proyecto/crates/compliance-primitives" }
# SSE handler stream type bound on `futures::Stream`.
futures = "0.3"

[dev-dependencies]
tempfile          = "3"
mockito           = "1"
tower             = { version = "0.5", features = ["util"] }
# SSE handler tests collect streaming body chunks for assertion.
http-body-util    = "0.1"

[profile.release]
opt-level     = 3
lto           = "thin"
strip         = "symbols"
codegen-units = 1

# Iterative release builds — full opt-level, no LTO, parallel
# codegen. Costs ~5 % runtime; saves ~50 % build time. Use for
# local validation; reserve `--release` for publish.
[profile.release-fast]
inherits      = "release"
lto           = false
codegen-units = 16
strip         = "none"
